# dream_fly_backend

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  README.md  docker-compose.yml
.understand-anything/: .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json
config/: default.toml  development.toml  production.toml
docs/adr/: 0001-bearer-token-auth.md  0002-course-lines-in-cart-and-orders.md  0003-full-entitlement-subscriptions.md  0004-report-semantics-and-venue-rental-revenue.md  0005-crud-passthrough-service-layer.md  0006-waitlist-manual-promotion.md  0007-order-refund-cancel-compensation.md  0008-leave-projection-approval-always-wins.md
docs/agents/: domain.md
docs/api/: integration-contract.md
migrations/: 20260410000001_init.sql  20260704000001_commerce_extension.sql  20260704000002_relax_discount_bound.sql  20260704000003_order_items_name_snapshot.sql  20260706000001_course_schedule_slots_and_sessions.sql  20260706000002_attendance_records.sql  20260706000003_leave_requests.sql  20260706000004_messages.sql  20260707000001_conversations_unordered_pair.sql  20260707000002_report_cards_and_certificates.sql  20260707000003_rewards.sql  20260707000004_point_reason_add_redeem.sql  20260707000005_course_level_add_foundation_elite.sql  20260708000001_contact_inquiry_type.sql  20260708000002_settings.sql  20260708000003_user_preferences.sql  20260708000004_users_birth_date.sql  20260708000005_orders_payment_method.sql  20260708000006_venue_rental_pricing.sql  20260708000007_subscription_derived_status.sql  20260710000001_countable_attendance_view.sql  20260711000001_active_enrolments_view.sql  20260717000001_time_slots_status_read_time_derive.sql  20260717000002_point_reason_add_refund_reasons.sql  20260717000003_point_ledger_refund_once.sql  20260717000004_order_items_stock_decremented.sql
scripts/: smoke.sh
src/: lib.rs  main.rs  startup.rs
src/config/: mod.rs
src/error/: mod.rs
src/extractors/: auth.rs  mod.rs  pagination.rs  request_id.rs
src/kafka/: consumer.rs  events.rs  mod.rs  outbox.rs  producer.rs
src/middleware/: cors.rs  mod.rs  rate_limit.rs  require_admin.rs  require_coach.rs  require_staff.rs
src/modules/: mod.rs
src/modules/attendance/: dto.rs  handlers.rs  marking.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/auth/: dto.rs  handlers.rs  linking.rs  mod.rs  model.rs  otp.rs  rate_limit.rs  repository.rs  reset_tokens.rs  routes.rs  service.rs
src/modules/bookings/: dto.rs  handlers.rs  mod.rs  model.rs  occupancy.rs  repository.rs  routes.rs  service.rs
src/modules/cart/: dto.rs  handlers.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/certificates/: dto.rs  handlers.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/coaches/: dto.rs  handlers.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/contact/: dto.rs  handlers.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/coupons/: dto.rs  handlers.rs  model.rs  repository.rs  routes.rs  service.rs
src/state/: mod.rs
src/utils/: clock.rs  double_option.rs  email.rs  google_oauth.rs  jwt.rs  mod.rs  password.rs  redis_counter.rs  slug.rs  sms.rs  studio_clock.rs  url_validation.rs  validation.rs
tests/: e2e_flows.rs  http_attendance.rs  http_auth.rs  http_bookings.rs  http_cart.rs  http_certificates.rs  http_coaches.rs  http_contact.rs  http_coupons.rs  http_courses.rs  http_enrolments.rs  http_error_contract.rs  http_leave.rs  http_messages.rs  http_notifications.rs  http_orders.rs  http_permissions.rs  http_points.rs  http_posts.rs  http_products.rs  http_reports.rs  http_rewards.rs  http_schedule.rs  http_sessions.rs  http_settings.rs  http_smoke.rs  http_subscriptions.rs  http_users.rs  http_venues.rs  http_waitlist.rs  kafka_consumer.rs  kafka_outbox.rs  middleware_auth_extractor.rs  middleware_cors_headers.rs  middleware_rate_limit.rs  service_attendance.rs  service_auth.rs  service_bookings.rs  service_cart.rs  service_certificates.rs  (+20 more)
tests/common/: fixtures.rs  http.rs  mocks.rs  mod.rs  twilio.rs
(+122 files in other folders)
